[Hints] Refactor HintsView and render dark theme
- JS in Hints has to be enabled in Archi's preferences for dark theme to work
- Mac kludge no longer needed